Update website and optimize images

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-W3TYTP5EXK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-W3TYTP5EXK');
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
 
@@ -17,17 +26,23 @@
     <div id="app">
         <header>
             <div class="logo">
-                <a href="http://gptsms.online/">
+                <a href="https://gptsms.online/">
                     <img src="./logo.png" alt="GPT SMS">
                 </a>
             </div>
             <div class="social">
-                <a href="https://github.com/gpt-sms/gpt-sms" target="_blank">
-                    <img src="./github.svg" alt="" width="40">
+                <a href="https://patreon.com/GPTSMS?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link" target="_blank" class="patreon">
+                    Patreon
+                </a>
+                <a href="https://www.paypal.com/donate/?hosted_button_id=8FFXDY4Y8N5QJ" target="_blank" class="paypal">
+                    Paypal
+                </a>
+                <a href="https://github.com/gpt-sms" target="_blank">
+                    <img src="./github.svg" alt="" width="50">
                 </a>
             </div>
         </header>
-        
+
         <main>
 
             <section class="banner" tabindex="0" aria-describedby="banner">
@@ -84,9 +99,14 @@
                 As the project advances and garners support, our aim is to broaden our coverage by incorporating additional phone numbers to accommodate users from various regions
                 </p>
                 
-                <a href="https://www.paypal.com/donate/?hosted_button_id=8FFXDY4Y8N5QJ" class="donate" target="_top">Donate</a>
-
-                <a href="https://patreon.com/GPTSMS" class="patreon">Patreon</a>
+                <div class="social">
+                    <a href="https://patreon.com/GPTSMS?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link" target="_blank" class="patreon">
+                        Patreon
+                    </a>
+                    <a href="https://www.paypal.com/donate/?hosted_button_id=8FFXDY4Y8N5QJ" target="_blank" class="paypal">
+                        Paypal
+                    </a>
+                </div>
             </section>
 
             <section class="infra">
