Fix social positionning

--- a/index.html
+++ b/index.html
@@ -31,12 +31,6 @@
                 </a>
             </div>
             <div class="social">
-                <a href="https://patreon.com/GPTSMS?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link" target="_blank" class="patreon">
-                    Patreon
-                </a>
-                <a href="https://www.paypal.com/donate/?hosted_button_id=8FFXDY4Y8N5QJ" target="_blank" class="paypal">
-                    Paypal
-                </a>
                 <a href="https://github.com/gpt-sms" target="_blank">
                     <img src="./github.svg" alt="" width="50">
                 </a>
@@ -48,6 +42,15 @@
             <section class="banner" tabindex="0" aria-describedby="banner">
                 <h1>Empowering Communication with AI</h1>
                 <h2>Access the power of AI through SMS, anytime, anywhere</h2>
+                <div class="social">
+                    <a href="https://patreon.com/GPTSMS?utm_medium=clipboard_copy&utm_source=copyLink&utm_campaign=creatorshare_creator&utm_content=join_link"
+                        target="_blank" class="patreon">
+                        Patreon
+                    </a>
+                    <a href="https://www.paypal.com/donate/?hosted_button_id=8FFXDY4Y8N5QJ" target="_blank" class="paypal">
+                        Paypal
+                    </a>
+                </div>
             </section>
 
             <section class="about" tabindex="0">
@@ -142,10 +145,10 @@
                 </a>
             </div>
             <div>
-                [ <a href="mailto: jrb.youssef@gmail.com">jrb.youssef@gmail.com</a> ]
+                Email contact: <a href="mailto: postmaster@gptsms.online">postmaster@gptsms.online</a>
             </div>
             <div>
-                [ <a href="https://github.com/gpt-sms/gpt-sms">GitHub Repository</a> ]
+                GitHub <a href="https://github.com/gpt-sms/gpt-sms">Repository</a>
             </div>
             <div class="copyright">
                 
