--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="twitter:card" content="Empowering Communication with AI, Access the power of AI through SMS, anytime, anywhere">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GPT SMS</title>
+    <meta name="description" content="GPT SMS Access the power of AI through SMS, anytime, anywhere">
   </head>
   <body>
     <canvas id="dotsCanvas"></canvas>
@@ -27,12 +28,12 @@
         <header>
             <div class="logo">
                 <a href="https://gptsms.online/">
-                    <img src="./logo.png" alt="GPT SMS">
+                    <img src="./logo.png" alt="GPT SMS" width="220" height="44">
                 </a>
             </div>
             <div class="social">
-                <a href="https://github.com/gpt-sms" target="_blank">
-                    <img src="./github.svg" alt="" width="50">
+                <a href="https://github.com/gpt-sms" target="_blank" title="GPT SMS Github repository" aria-label="GPT SMS Github repository">
+                    <img src="./github.svg" alt="Github" width="50" height="50">
                 </a>
             </div>
         </header>
@@ -64,7 +65,7 @@
 
             <section class="warning" tabindex="0">
                 <div>
-                    <img src="warning--white.svg" alt="warning" width="100">
+                    <img src="warning--white.svg" alt="warning" width="100" height="100">
                 </div>
                 <div class="warning__message">
                     The <b>GPT SMS</b> project is still under development, and as we work on implementing new features and improvements, please be
@@ -116,23 +117,23 @@
                 <h3>Infrastructure powered by</h3>
                 <ul>
                     <li>
-                        <a href="https://openai.com/" target="_blank">
-                            <img src="logo-openai.png" alt="" width="200px">
+                        <a href="https://openai.com/" target="_blank" title="Open AI website" aria-label="Open AI website">
+                            <img src="logo-openai.png" alt="openai" width="200" height="50">
                         </a>
                     </li>
                     <li>
-                        <a href="https://vonage.com/" target="_blank">
-                            <img src="logo-vonage.png" alt="" width="200px">
+                        <a href="https://vonage.com/" target="_blank" title="Vonage website" aria-label="Vonage website">
+                            <img src="logo-vonage.png" alt="vonage" width="200" height="50">
                         </a>
                     </li>
                     <li>
-                        <a href="https://heroku.com" target="_blank">
-                            <img src="logo-heroku.png" alt="" width="200px">
+                        <a href="https://heroku.com" target="_blank" title="Heroku website" aria-label="Heroku website">
+                            <img src="logo-heroku.png" alt="heroku" width="200" height="56">
                         </a>
                     </li>
                     <li>
-                        <a href="https://ovh.com" target="_blank">
-                            <img src="logo-ovh.png" alt="" width="200px">
+                        <a href="https://ovh.com" target="_blank" title="OVH website" aria-label="OVH website">
+                            <img src="logo-ovh.png" alt="ovh" width="200" height="44">
                         </a>
                     </li>
                 </ul>
@@ -140,8 +141,8 @@
         </main>
         <footer tabindex="0">
             <div>
-                <a href="https://gptsms.online">
-                    <img src="logo.png" alt="" width="200px">
+                <a href="https://gptsms.online" title="GPT SMS logo" aria-label="GPT SMS logo">
+                    <img src="logo.png" alt="" width="220" height="44">
                 </a>
             </div>
             <div>
